# rocm-gemm-benchmark

./: .gitignore  .gitmodules  README.md  attention_and_matmul_spec_f16.mlir  attention_and_matmul_spec_f8.mlir  gb  meson.build  sdxl_attention.mlir
.github/workflows/: run_bench.yml
attention/mlir/: attention_B1_H32_SQ1024_SKV1024_DH128_fp16.mlir  attention_B1_H32_SQ1024_SKV2048_DH128_fp16.mlir  attention_B1_H32_SQ1024_SKV4096_DH128_f16.mlir  attention_B1_H32_SQ2048_SKV1024_DH128_f16.mlir  attention_B1_H32_SQ2048_SKV2048_DH128_f8.mlir  attention_B1_H32_SQ2048_SKV4096_DH128_fp8.mlir  attention_B1_H32_SQ4096_SKV1024_DH128_fp16.mlir  attention_B1_H32_SQ4096_SKV2048_DH128_fp16.mlir  attention_B1_H32_SQ4096_SKV4096_DH128_fp8.mlir  attention_B1_H40_SQ1024_SKV1024_DH128_fp8.mlir  attention_B1_H40_SQ1024_SKV2048_DH128_fp16.mlir  attention_B1_H40_SQ1024_SKV4096_DH128_fp16.mlir  attention_B1_H40_SQ2048_SKV1024_DH128_fp8.mlir  attention_B1_H40_SQ2048_SKV2048_DH128_fp16.mlir  attention_B1_H40_SQ2048_SKV4096_DH128_fp8.mlir  attention_B1_H40_SQ4096_SKV1024_DH128_fp16.mlir  attention_B1_H40_SQ4096_SKV2048_DH128_fp16.mlir  attention_B1_H40_SQ4096_SKV4096_DH128_f8.mlir  attention_B1_H64_SQ1024_SKV1024_DH128_f16.mlir  attention_B1_H64_SQ1024_SKV2048_DH128_fp8.mlir  attention_B1_H64_SQ1024_SKV4096_DH128_fp8.mlir  attention_B1_H64_SQ2048_SKV1024_DH128_f8.mlir  attention_B1_H64_SQ2048_SKV2048_DH128_f8.mlir  attention_B1_H64_SQ2048_SKV4096_DH128_fp16.mlir  attention_B1_H64_SQ4096_SKV1024_DH128_f8.mlir  attention_B1_H64_SQ4096_SKV2048_DH128_fp8.mlir  attention_B1_H64_SQ4096_SKV4096_DH128_fp8.mlir  attention_B2_H10_SQ1024_SKV1024_DH64_fp16.mlir  attention_B2_H10_SQ4096_SKV4096_DH64_f16.mlir  attention_B2_H10_SQ4096_SKV64_DH64_fp16.mlir  attention_B2_H20_SQ1024_SKV64_DH64_f8.mlir  attention_B2_H32_SQ1024_SKV1024_DH128_f8.mlir  attention_B2_H32_SQ1024_SKV2048_DH128_f8.mlir  attention_B2_H32_SQ1024_SKV4096_DH128_fp8.mlir  attention_B2_H32_SQ2048_SKV1024_DH128_f16.mlir  attention_B2_H32_SQ2048_SKV2048_DH128_f8.mlir  attention_B2_H32_SQ2048_SKV4096_DH128_fp16.mlir  attention_B2_H32_SQ4096_SKV1024_DH128_f8.mlir  attention_B2_H32_SQ4096_SKV2048_DH128_fp16.mlir  attention_B2_H32_SQ4096_SKV4096_DH128_fp8.mlir  (+45 more)
attention/vmfb/: attention_B1_H32_SQ1024_SKV1024_DH128_f16.vmfb  attention_B1_H32_SQ1024_SKV1024_DH128_f8.vmfb  attention_B1_H32_SQ1024_SKV2048_DH128_f16.vmfb  attention_B1_H32_SQ1024_SKV2048_DH128_f8.vmfb  attention_B1_H32_SQ1024_SKV4096_DH128_f16.vmfb  attention_B1_H32_SQ1024_SKV4096_DH128_f8.vmfb  attention_B1_H32_SQ2048_SKV1024_DH128_f16.vmfb  attention_B1_H32_SQ2048_SKV1024_DH128_f8.vmfb  attention_B1_H32_SQ2048_SKV2048_DH128_f16.vmfb  attention_B1_H32_SQ2048_SKV2048_DH128_f8.vmfb  attention_B1_H32_SQ2048_SKV4096_DH128_f16.vmfb  attention_B1_H32_SQ2048_SKV4096_DH128_f8.vmfb  attention_B1_H32_SQ4096_SKV1024_DH128_f16.vmfb  attention_B1_H32_SQ4096_SKV1024_DH128_f8.vmfb  attention_B1_H32_SQ4096_SKV2048_DH128_f16.vmfb  attention_B1_H32_SQ4096_SKV2048_DH128_f8.vmfb  attention_B1_H32_SQ4096_SKV4096_DH128_f16.vmfb  attention_B1_H32_SQ4096_SKV4096_DH128_f8.vmfb  attention_B1_H40_SQ1024_SKV1024_DH128_f16.vmfb  attention_B1_H40_SQ1024_SKV1024_DH128_f8.vmfb  attention_B1_H40_SQ1024_SKV2048_DH128_f16.vmfb  attention_B1_H40_SQ1024_SKV2048_DH128_f8.vmfb  attention_B1_H40_SQ1024_SKV4096_DH128_f16.vmfb  attention_B1_H40_SQ1024_SKV4096_DH128_f8.vmfb  attention_B1_H40_SQ2048_SKV1024_DH128_f16.vmfb  attention_B1_H40_SQ2048_SKV1024_DH128_f8.vmfb  attention_B1_H40_SQ2048_SKV2048_DH128_f16.vmfb  attention_B1_H40_SQ2048_SKV2048_DH128_f8.vmfb  attention_B1_H40_SQ2048_SKV4096_DH128_f16.vmfb  attention_B1_H40_SQ2048_SKV4096_DH128_f8.vmfb  attention_B1_H40_SQ4096_SKV1024_DH128_f16.vmfb  attention_B1_H40_SQ4096_SKV1024_DH128_f8.vmfb  attention_B1_H40_SQ4096_SKV2048_DH128_f16.vmfb  attention_B1_H40_SQ4096_SKV2048_DH128_f8.vmfb  attention_B1_H40_SQ4096_SKV4096_DH128_f16.vmfb  attention_B1_H40_SQ4096_SKV4096_DH128_f8.vmfb  attention_B1_H64_SQ1024_SKV1024_DH128_f16.vmfb  attention_B1_H64_SQ1024_SKV1024_DH128_f8.vmfb  attention_B1_H64_SQ1024_SKV2048_DH128_f16.vmfb  attention_B1_H64_SQ1024_SKV2048_DH128_f8.vmfb  (+130 more)
attentionbench/: attention_utils.py  benchmark_torch_attention.py  benchmark_triton_attention.py  shark_fa2.py
conv/mlir/: conv_2d_nchw_fchw_1x112x112x64x7x7x3_f32xf32xf32_stride2.mlir
conv/vmfb/: conv_2d_nchw_fchw_1x112x112x64x7x7x3_f32xf32xf32_stride2.vmfb
convbench/: conv_utils.py  shark_conv.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  GEMMBenchmark.js  chart.css  utils.js
gemmbench/: __init__.py  bench_utils.py  benchmark_torch_attention.py  cli.py  csv_to_hdf.py  definitions.py  gbm_py.py  gemm.py  git.py  problems.py  requirements.txt  server.py  shark_fa2.py  tune.py
kernels/mlir/: gemm_10240_8192_16_bf16_tA.mlir  gemm_10240_8192_16_fp16_tA.mlir  gemm_10240_8192_1_bf16_tA.mlir  gemm_10240_8192_1_fp16_tA.mlir  gemm_10240_8192_2_bf16_tA.mlir  gemm_10240_8192_2_fp16_tA.mlir  gemm_10240_8192_32_bf16_tA.mlir  gemm_10240_8192_32_fp16_tA.mlir  gemm_10240_8192_4_bf16_tA.mlir  gemm_10240_8192_4_fp16_tA.mlir  gemm_10240_8192_8_bf16_tA.mlir  gemm_10240_8192_8_fp16_tA.mlir  gemm_1024_1024_1024_bf16.mlir  gemm_1024_1024_1024_bf16_tA.mlir  gemm_1024_1024_1024_bf16_tB.mlir  gemm_1024_1024_1024_fp16.mlir  gemm_1024_1024_1024_fp16_tA.mlir  gemm_1024_1024_1024_fp16_tB.mlir  gemm_1024_1024_1024_fp32.mlir  gemm_1024_1024_1024_fp32_tA.mlir  (+736 more)
results/: torch_llama_sdxl_attention.csv  triton_llama_sdxl_attention.csv
src/: .gitignore
src/ireekernels/: CMakeLists.txt  IREEGemmConfig.cmake.in  gemm.mlir
src/ireekernels/include/IREEGemm/: Benchmark.hpp  Codegen.hpp  Compile.h  Runtime.h  Runtime.hpp  Utils.h
src/ireekernels/src/: driver.cpp
src/ireekernels/src/gemm_benchmark/: CMakeLists.txt  driver.c  gemm_benchmark.c  gemm_benchmark2.c  gemm_runtime_runner.cpp  gemm_runtime_state.cpp  gemm_runtime_storage.cpp
src/ireekernels/src/gemm_codegen/: CMakeLists.txt  driver.cpp  gemm_mlir.cpp  utils.cpp
src/ireekernels/src/gemm_compile/: CMakeLists.txt  driver.c  gemm_compile.c
(+778 files in other folders)
